--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -21,3 +21,7 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+	padding-bottom: 10px
+}
