--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ body {
 }
 
 /* Write all remaining styles here */
-
+header a {
+	color: rgb(152,173,166);
+}
 h1 {
 	padding-bottom: 10px;
 	margin: 0 0 5px;
