--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@ body {
 	padding: 0 45px 20px;
 }
 
-/* Write all remaining styles here */
 header a {
 	color: rgb(152,173,166);
 	text-decoration: none;
 }
+
 h1 {
 	padding-bottom: 10px;
 	margin: 0 0 5px;
@@ -33,7 +33,7 @@ h1 {
 	font-family: 'Baskerville', serif;
 	border-bottom: 1px solid #ccc;
 }
-
+/*////////// Featured Styles //////////*/
 #featured img {
 	border: 5px rgb(152,173,166) solid;
 }
@@ -55,4 +55,11 @@ h1 {
 #featured a:hover {
 	color: #1783bb;
 	text-decoration: underline;
+}
+
+/*////////// Press Styles //////////*/
+
+#press h2 {
+	color: rgb(111,127,122);
+	font-size: 2em;
 }
