--- a/css/style.css
+++ b/css/style.css
@@ -80,9 +80,9 @@ h1 {
 /*////////// Footer Styles //////////*/
 footer {
 	background: #fff;
+	text-align: right;
 }
 
 footer p {
 	color: #555;
-	float: right;
 }
